--- a/BudgetHelper/BudgetHelper/BudgetHelper.csproj
+++ b/BudgetHelper/BudgetHelper/BudgetHelper.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Helpers\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
@@ -27,6 +28,9 @@
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\StartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Styles\BackgroundStyles.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
