--- a/BudgetHelper/BudgetHelper/BudgetHelper.csproj
+++ b/BudgetHelper/BudgetHelper/BudgetHelper.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="FreshMvvm" Version="4.0.1" />
+    <PackageReference Include="NLog" Version="5.2.5" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.6" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2612" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
