--- a/BudgetHelper/BudgetHelper/BudgetHelper.csproj
+++ b/BudgetHelper/BudgetHelper/BudgetHelper.csproj
@@ -46,6 +46,9 @@
     <EmbeddedResource Update="Pages\AddProductPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\EditProductPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
